shade off month days via app.js

--- a/calendar.html
+++ b/calendar.html
@@ -83,7 +83,7 @@
                   <span id="d1">27</span> 
                   <div class= circDown>
                   <div class=""></div>
-                  <div class="circHuda"></div>
+                  <div class=""></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
                   </div>
@@ -94,8 +94,8 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d2">28</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
-                  <div class="circHuda"></div>
+                  <div class=""></div>
+                  <div class=""></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
                   </div>
@@ -106,8 +106,8 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d3">29</span> 
                 <div class= circDown>
-                  <div class="circPaolo"></div>
-                  <div class="circHuda"></div>
+                  <div class=""></div>
+                  <div class=""></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
                   </div>
@@ -154,8 +154,8 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d7">3</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
-                  <div class="circHuda"></div>
+                  <div class=""></div>
+                  <div class=""></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
                   </div>
@@ -168,8 +168,8 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d8">4</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
-                  <div class="circHuda"></div>
+                  <div class=""></div>
+                  <div class=""></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
                   </div>
@@ -180,7 +180,7 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d9">5</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
+                  <div class=""></div>
                   <div class="circHuda"></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
@@ -192,7 +192,7 @@
                 <div class="days_big"  onclick="myFunction()">
                 <span id="d10">6</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
+                  <div class=""></div>
                   <div class="circHuda"></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
@@ -205,7 +205,7 @@
                 <span id="d11">7</span>
                 <div class= circDown>
                   <div class="circPaolo"></div>
-                  <div class="circHuda"></div>
+                  <div class=""></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
                   </div>
@@ -229,7 +229,7 @@
                 <span id="d13">9</span>
                 <div class= circDown>
                   <div class="circPaolo"></div>
-                  <div class="circHuda"></div>
+                  <div class=""></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
                   </div>
@@ -240,7 +240,7 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d14">10</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
+                  <div class=""></div>
                   <div class="circHuda"></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
@@ -254,7 +254,7 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d15">11</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
+                  <div class=""></div>
                   <div class="circHuda"></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
@@ -267,7 +267,7 @@
                 <span id="d16">12</span>
                 <div class= circDown>
                   <div class="circPaolo"></div>
-                  <div class="circHuda"></div>
+                  <div class=""></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
                   </div>
@@ -278,7 +278,7 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d17">13</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
+                  <div class=""></div>
                   <div class="circHuda"></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
@@ -290,7 +290,7 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d18">14</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
+                  <div class=""></div>
                   <div class="circHuda"></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
@@ -302,8 +302,8 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d19">15</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
-                  <div class="circHuda"></div>
+                  <div class=""></div>
+                  <div class=""></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
                   </div>
@@ -314,7 +314,7 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d20">16</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
+                  <div class=""></div>
                   <div class="circHuda"></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
@@ -326,7 +326,7 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d21">17</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
+                  <div class=""></div>
                   <div class="circHuda"></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
@@ -340,7 +340,7 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d22">18</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
+                  <div class=""></div>
                   <div class="circHuda"></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
@@ -352,7 +352,7 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d23">19</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
+                  <div class=""></div>
                   <div class="circHuda"></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
@@ -364,7 +364,7 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d24">20</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
+                  <div class=""></div>
                   <div class="circHuda"></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
@@ -376,7 +376,7 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d25">21</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
+                  <div class=""></div>
                   <div class="circHuda"></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
@@ -388,7 +388,7 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d26">22</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
+                  <div class=""></div>
                   <div class="circHuda"></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
@@ -400,7 +400,7 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d27">23</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
+                  <div class=""></div>
                   <div class="circHuda"></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
@@ -412,7 +412,7 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d28">24</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
+                  <div class=""></div>
                   <div class="circHuda"></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
@@ -426,10 +426,10 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d29">25</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
-                  <div class="circHuda"></div>
-                  <div class="circAshley"></div>
-                  <div class="circAmberdeen"></div>
+                  <div class=""></div>
+                  <div class=""></div>
+                  <div class=""></div>
+                  <div class=""></div>
                   </div>
               </div>
             </td>
@@ -501,10 +501,10 @@
                 <div class="days_big" onclick="myFunction()">
                   <span id="d35">31</span>
                   <div class= circDown>
-                    <div class="circPaolo"></div>
-                    <div class="circHuda"></div>
-                    <div class="circAshley"></div>
-                    <div class="circAmberdeen"></div>
+                    <div class=""></div>
+                    <div class=""></div>
+                    <div class=""></div>
+                    <div class=""></div>
                     </div>
                 </div>
               </td>
@@ -518,10 +518,10 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d36">1</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
-                  <div class="circHuda"></div>
-                  <div class="circAshley"></div>
-                  <div class="circAmberdeen"></div>
+                  <div class=""></div>
+                  <div class=""></div>
+                  <div class=""></div>
+                  <div class=""></div>
                   </div>
               </div>
             </td>
@@ -531,10 +531,10 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d37">2</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
-                  <div class="circHuda"></div>
-                  <div class="circAshley"></div>
-                  <div class="circAmberdeen"></div>
+                  <div class=""></div>
+                  <div class=""></div>
+                  <div class=""></div>
+                  <div class=""></div>
                   </div>
 
               </div>
@@ -544,10 +544,10 @@
                 <div class="days_big" onclick="myFunction()">
                   <span id="d38">3</span>
                   <div class= circDown>
-                    <div class="circPaolo"></div>
-                    <div class="circHuda"></div>
-                    <div class="circAshley"></div>
-                    <div class="circAmberdeen"></div>
+                    <div class=""></div>
+                    <div class=""></div>
+                    <div class=""></div>
+                    <div class=""></div>
                     </div>
                 </div>
               </td>
@@ -556,10 +556,10 @@
                 <div class="days_big" onclick="myFunction()">
                   <span id="d39">4</span>
                   <div class= circDown>
-                    <div class="circPaolo"></div>
-                    <div class="circHuda"></div>
-                    <div class="circAshley"></div>
-                    <div class="circAmberdeen"></div>
+                    <div class=""></div>
+                    <div class=""></div>
+                    <div class=""></div>
+                    <div class=""></div>
                     </div>
                 </div>
               </td>
@@ -568,10 +568,10 @@
                 <div class="days_big" onclick="myFunction()">
                   <span id="d40">5</span>
                   <div class= circDown>
-                    <div class="circPaolo"></div>
-                    <div class="circHuda"></div>
-                    <div class="circAshley"></div>
-                    <div class="circAmberdeen"></div>
+                    <div class=""></div>
+                    <div class=""></div>
+                    <div class=""></div>
+                    <div class=""></div>
                     </div>
                 </div>
               </td>
@@ -580,10 +580,10 @@
                 <div class="days_big" onclick="myFunction()">
                   <span id="d41">6</span>
                   <div class= circDown>
-                    <div class="circPaolo"></div>
-                    <div class="circHuda"></div>
-                    <div class="circAshley"></div>
-                    <div class="circAmberdeen"></div>
+                    <div class=""></div>
+                    <div class=""></div>
+                    <div class=""></div>
+                    <div class=""></div>
                     </div>
                 </div>
               </td>
@@ -592,10 +592,10 @@
                 <div class="days_big" onclick="myFunction()">
                   <span id="d42">7</span>
                   <div class= circDown>
-                    <div class="circPaolo"></div>
-                    <div class="circHuda"></div>
-                    <div class="circAshley"></div>
-                    <div class="circAmberdeen"></div>
+                    <div class=""></div>
+                    <div class=""></div>
+                    <div class=""></div>
+                    <div class=""></div>
                     </div>
                 </div>
 
