--- a/calendar.html
+++ b/calendar.html
@@ -84,8 +84,8 @@
                   <div class= circDown>
                   <div class=""></div>
                   <div class=""></div>
-                  <div class="circAshley"></div>
-                  <div class="circAmberdeen"></div>
+                  <div class=""></div>
+                  <div class=""></div>
                   </div>
                 </div>
               </td>
@@ -156,8 +156,8 @@
                 <div class= circDown>
                   <div class=""></div>
                   <div class=""></div>
-                  <div class="circAshley"></div>
-                  <div class="circAmberdeen"></div>
+                  <div class=""></div>
+                  <div class=""></div>
                   </div>
               </div>
             </td>
@@ -170,8 +170,8 @@
                 <div class= circDown>
                   <div class=""></div>
                   <div class=""></div>
-                  <div class="circAshley"></div>
-                  <div class="circAmberdeen"></div>
+                  <div class=""></div>
+                  <div class=""></div>
                   </div>
               </div>
             </td>
@@ -255,9 +255,9 @@
                 <span id="d15">11</span>
                 <div class= circDown>
                   <div class=""></div>
-                  <div class="circHuda"></div>
-                  <div class="circAshley"></div>
-                  <div class="circAmberdeen"></div>
+                  <div class=""></div>
+                  <div class=""></div>
+                  <div class=""></div>
                   </div>
               </div>
             </td>
@@ -327,9 +327,9 @@
                 <span id="d21">17</span>
                 <div class= circDown>
                   <div class=""></div>
-                  <div class="circHuda"></div>
-                  <div class="circAshley"></div>
-                  <div class="circAmberdeen"></div>
+                  <div class=""></div>
+                  <div class=""></div>
+                  <div class=""></div>
                   </div>
               </div>
             </td>
@@ -341,9 +341,9 @@
                 <span id="d22">18</span>
                 <div class= circDown>
                   <div class=""></div>
-                  <div class="circHuda"></div>
-                  <div class="circAshley"></div>
-                  <div class="circAmberdeen"></div>
+                  <div class=""></div>
+                  <div class=""></div>
+                  <div class=""></div>
                   </div>
               </div>
             </td>
@@ -352,8 +352,8 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d23">19</span>
                 <div class= circDown>
+                  <div class="circPaolo"></div>
                   <div class=""></div>
-                  <div class="circHuda"></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
                   </div>
@@ -364,8 +364,8 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d24">20</span>
                 <div class= circDown>
+                  <div class="circPaolo"></div>
                   <div class=""></div>
-                  <div class="circHuda"></div>
                   <div class="circAshley"></div>
                   <div class="circAmberdeen"></div>
                   </div>
@@ -391,7 +391,7 @@
                   <div class=""></div>
                   <div class="circHuda"></div>
                   <div class="circAshley"></div>
-                  <div class="circAmberdeen"></div>
+                  <div class=""></div>
                   </div>
               </div>
             </td>
@@ -403,7 +403,7 @@
                   <div class=""></div>
                   <div class="circHuda"></div>
                   <div class="circAshley"></div>
-                  <div class="circAmberdeen"></div>
+                  <div class=""></div>
                   </div>
               </div>
             </td>
@@ -415,7 +415,7 @@
                   <div class=""></div>
                   <div class="circHuda"></div>
                   <div class="circAshley"></div>
-                  <div class="circAmberdeen"></div>
+                  <div class=""></div>
                   </div>
               </div>
             </td>
@@ -439,10 +439,10 @@
                 <div class="days_big" onclick="myFunction()">
                 <span id="d30">26</span>
                 <div class= circDown>
-                  <div class="circPaolo"></div>
-                  <div class="circHuda"></div>
-                  <div class="circAshley"></div>
-                  <div class="circAmberdeen"></div>
+                  <div class=""></div>
+                  <div class=""></div>
+                  <div class=""></div>
+                  <div class=""></div>
                   </div>
 
               </div>
@@ -453,10 +453,10 @@
                 <div class="days_big" onclick="myFunction()">
                   <span id="d31">27</span>
                   <div class= circDown>
-                    <div class="circPaolo"></div>
-                    <div class="circHuda"></div>
-                    <div class="circAshley"></div>
-                    <div class="circAmberdeen"></div>
+                    <div class=""></div>
+                    <div class=""></div>
+                    <div class=""></div>
+                    <div class=""></div>
                     </div>
                 </div>
               </td>
@@ -466,8 +466,8 @@
                   <span id="d32">28</span>
                   <div class= circDown>
                     <div class="circPaolo"></div>
-                    <div class="circHuda"></div>
-                    <div class="circAshley"></div>
+                    <div class=""></div>
+                    <div class=""></div>
                     <div class="circAmberdeen"></div>
                     </div>
                 </div>
@@ -478,9 +478,9 @@
                   <span id="d33">29</span>
                   <div class= circDown>
                     <div class="circPaolo"></div>
-                    <div class="circHuda"></div>
+                    <div class=""></div>
                     <div class="circAshley"></div>
-                    <div class="circAmberdeen"></div>
+                    <div class=""></div>
                     </div>
                 </div>
               </td>
