--- a/calendar.html
+++ b/calendar.html
@@ -80,7 +80,7 @@
               <td>
               <!-- Sun Row 1 -->
                 <div class="days_big"  onclick="myFunction()">
-                  <span id="d1">27</span> 
+                  <span id="d1" class= "d-big">27</span> 
                   <div class= circDown>
                   <div class=""></div>
                   <div class=""></div>
@@ -92,7 +92,7 @@
               <td>
                 <!-- Mon Row 1 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d2">28</span>
+                <span id="d2" class= "d-big">28</span>
                 <div class= circDown>
                   <div class=""></div>
                   <div class=""></div>
@@ -104,7 +104,7 @@
               <td>
                 <!-- Tue Row 1 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d3">29</span> 
+                <span id="d3" class= "d-big">29</span> 
                 <div class= circDown>
                   <div class=""></div>
                   <div class=""></div>
@@ -116,7 +116,7 @@
               <td>
                 <!-- Wed Row 1 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d4">30</span>
+                <span id="d4" class= "d-big">30</span>
                 <div class= circDown>
                   <div class="circPaolo"></div>
                   <div class="circHuda"></div>
@@ -128,7 +128,7 @@
               <td>
                 <!-- Thu Row 1 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d5">1</span>
+                <span id="d5" class= "d-big">1</span>
                 <div class= circDown>
                   <div class="circPaolo"></div>
                   <div class="circHuda"></div>
@@ -140,7 +140,7 @@
               <td>
                 <!-- Fri Row 1 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d6">2</span>
+                <span id="d6" class= "d-big">2</span>
                 <div class= circDown>
                   <div class="circPaolo"></div>
                   <div class="circHuda"></div>
@@ -152,7 +152,7 @@
               <td>
                 <!-- Sat Row 1 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d7">3</span>
+                <span id="d7" class= "d-big">3</span>
                 <div class= circDown>
                   <div class=""></div>
                   <div class=""></div>
@@ -166,7 +166,7 @@
               <td>
                 <!-- Sun Row 2 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d8">4</span>
+                <span id="d8" class= "d-big">4</span>
                 <div class= circDown>
                   <div class=""></div>
                   <div class=""></div>
@@ -178,7 +178,7 @@
               <td>
                 <!-- Mon Row 2 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d9">5</span>
+                <span id="d9" class= "d-big">5</span>
                 <div class= circDown>
                   <div class=""></div>
                   <div class="circHuda"></div>
@@ -190,7 +190,7 @@
               <td>
                 <!-- Tue Row 2 -->
                 <div class="days_big"  onclick="myFunction()">
-                <span id="d10">6</span>
+                <span id="d10" class= "d-big">6</span>
                 <div class= circDown>
                   <div class=""></div>
                   <div class="circHuda"></div>
@@ -202,7 +202,7 @@
               <td>
                 <!-- Wed Row 2 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d11">7</span>
+                <span id="d11" class= "d-big">7</span>
                 <div class= circDown>
                   <div class="circPaolo"></div>
                   <div class=""></div>
@@ -214,7 +214,7 @@
               <td>
                 <!-- Thu Row 2 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d12">8</span>
+                <span id="d12" class= "d-big">8</span>
                 <div class= circDown>
                   <div class="circPaolo"></div>
                   <div class="circHuda"></div>
@@ -226,7 +226,7 @@
               <td>
                 <!-- Fri Row 2 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d13">9</span>
+                <span id="d13" class= "d-big">9</span>
                 <div class= circDown>
                   <div class="circPaolo"></div>
                   <div class=""></div>
@@ -238,7 +238,7 @@
               <td>
                 <!-- Sat Row 2 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d14">10</span>
+                <span id="d14" class= "d-big">10</span>
                 <div class= circDown>
                   <div class=""></div>
                   <div class="circHuda"></div>
@@ -252,7 +252,7 @@
               <td>
                 <!-- Sun Row 3 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d15">11</span>
+                <span id="d15" class= "d-big">11</span>
                 <div class= circDown>
                   <div class=""></div>
                   <div class=""></div>
@@ -264,7 +264,7 @@
               <td>
                 <!-- Mon Row 3 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d16">12</span>
+                <span id="d16" class= "d-big">12</span>
                 <div class= circDown>
                   <div class="circPaolo"></div>
                   <div class=""></div>
@@ -276,7 +276,7 @@
               <td>
                 <!-- Tue Row 3 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d17">13</span>
+                <span id="d17" class= "d-big">13</span>
                 <div class= circDown>
                   <div class=""></div>
                   <div class="circHuda"></div>
@@ -288,7 +288,7 @@
               <td>
                 <!-- Wed Row 3 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d18">14</span>
+                <span id="d18" class= "d-big">14</span>
                 <div class= circDown>
                   <div class=""></div>
                   <div class="circHuda"></div>
@@ -300,7 +300,7 @@
               <td>
                 <!-- Thu Row 3 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d19">15</span>
+                <span id="d19" class= "d-big">15</span>
                 <div class= circDown>
                   <div class=""></div>
                   <div class=""></div>
@@ -312,7 +312,7 @@
               <td>
                 <!-- Fri Row 3 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d20">16</span>
+                <span id="d20" class= "d-big">16</span>
                 <div class= circDown>
                   <div class=""></div>
                   <div class="circHuda"></div>
@@ -324,7 +324,7 @@
               <td>
                 <!-- Sat Row 3 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d21">17</span>
+                <span id="d21" class= "d-big">17</span>
                 <div class= circDown>
                   <div class=""></div>
                   <div class=""></div>
@@ -338,7 +338,7 @@
               <td>
                 <!-- Sun Row 4 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d22">18</span>
+                <span id="d22" class= "d-big">18</span>
                 <div class= circDown>
                   <div class=""></div>
                   <div class=""></div>
@@ -350,7 +350,7 @@
               <td>
                 <!-- Mon Row 4 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d23">19</span>
+                <span id="d23" class= "d-big">19</span>
                 <div class= circDown>
                   <div class="circPaolo"></div>
                   <div class=""></div>
@@ -362,7 +362,7 @@
               <td>
                 <!-- Tue Row 4 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d24">20</span>
+                <span id="d24" class= "d-big">20</span>
                 <div class= circDown>
                   <div class="circPaolo"></div>
                   <div class=""></div>
@@ -374,7 +374,7 @@
               <td>
                 <!-- Wed Row 4 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d25">21</span>
+                <span id="d25" class= "d-big">21</span>
                 <div class= circDown>
                   <div class=""></div>
                   <div class="circHuda"></div>
@@ -386,7 +386,7 @@
               <td>
                 <!-- Thu Row 4 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d26">22</span>
+                <span id="d26" class= "d-big">22</span>
                 <div class= circDown>
                   <div class=""></div>
                   <div class="circHuda"></div>
@@ -398,7 +398,7 @@
               <td>
                 <!-- Fri Row 4 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d27">23</span>
+                <span id="d27" class= "d-big">23</span>
                 <div class= circDown>
                   <div class=""></div>
                   <div class="circHuda"></div>
@@ -410,7 +410,7 @@
               <td>
                 <!-- Sat Row 4 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d28">24</span>
+                <span id="d28" class= "d-big">24</span>
                 <div class= circDown>
                   <div class=""></div>
                   <div class="circHuda"></div>
@@ -424,7 +424,7 @@
               <td>
                 <!-- Sun Row 5 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d29">25</span>
+                <span id="d29" class= "d-big">25</span>
                 <div class= circDown>
                   <div class=""></div>
                   <div class=""></div>
@@ -437,7 +437,7 @@
               <td>
                 <!-- Mon Row 5 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d30">26</span>
+                <span id="d30" class= "d-big">26</span>
                 <div class= circDown>
                   <div class=""></div>
                   <div class=""></div>
@@ -451,7 +451,7 @@
                 <!-- Tue Row 5 -->
 
                 <div class="days_big" onclick="myFunction()">
-                  <span id="d31">27</span>
+                  <span id="d31" class= "d-big">27</span>
                   <div class= circDown>
                     <div class=""></div>
                     <div class=""></div>
@@ -463,7 +463,7 @@
               <td>
                 <!-- Wed Row 5 -->
                 <div class="days_big" onclick="myFunction()">
-                  <span id="d32">28</span>
+                  <span id="d32" class= "d-big">28</span>
                   <div class= circDown>
                     <div class="circPaolo"></div>
                     <div class=""></div>
@@ -475,7 +475,7 @@
               <td>
                 <!-- Thu Row 5 -->
                 <div class="days_big" onclick="myFunction()">
-                  <span id="d33">29</span>
+                  <span id="d33" class= "d-big">29</span>
                   <div class= circDown>
                     <div class="circPaolo"></div>
                     <div class=""></div>
@@ -487,7 +487,7 @@
               <td>
                 <!-- Fri Row 5 -->
                 <div class="days_big" onclick="myFunction()">
-                  <span id="d34">30</span>
+                  <span id="d34" class= "d-big">30</span>
                   <div class= circDown>
                     <div class="circPaolo"></div>
                     <div class="circHuda"></div>
@@ -499,7 +499,7 @@
               <td>
                 <!-- Sat Row 5 -->
                 <div class="days_big" onclick="myFunction()">
-                  <span id="d35">31</span>
+                  <span id="d35" class= "d-big">31</span>
                   <div class= circDown>
                     <div class=""></div>
                     <div class=""></div>
@@ -516,7 +516,7 @@
               <td>
                 <!-- Sun Row 6 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d36">1</span>
+                <span id="d36" class= "d-big">1</span>
                 <div class= circDown>
                   <div class=""></div>
                   <div class=""></div>
@@ -529,7 +529,7 @@
               <td>
                 <!-- Mon Row 6 -->
                 <div class="days_big" onclick="myFunction()">
-                <span id="d37">2</span>
+                <span id="d37" class= "d-big">2</span>
                 <div class= circDown>
                   <div class=""></div>
                   <div class=""></div>
@@ -542,7 +542,7 @@
               <td>
                 <!-- Tue Row 6 -->
                 <div class="days_big" onclick="myFunction()">
-                  <span id="d38">3</span>
+                  <span id="d38" class= "d-big">3</span>
                   <div class= circDown>
                     <div class=""></div>
                     <div class=""></div>
@@ -554,7 +554,7 @@
               <td>
                 <!-- Wed Row 6 -->
                 <div class="days_big" onclick="myFunction()">
-                  <span id="d39">4</span>
+                  <span id="d39" class= "d-big">4</span>
                   <div class= circDown>
                     <div class=""></div>
                     <div class=""></div>
@@ -566,7 +566,7 @@
               <td>
                 <!-- Thu Row 6 -->
                 <div class="days_big" onclick="myFunction()">
-                  <span id="d40">5</span>
+                  <span id="d40" class= "d-big">5</span>
                   <div class= circDown>
                     <div class=""></div>
                     <div class=""></div>
@@ -578,7 +578,7 @@
               <td>
                 <!-- Fri Row 6 -->
                 <div class="days_big" onclick="myFunction()">
-                  <span id="d41">6</span>
+                  <span id="d41" class= "d-big">6</span>
                   <div class= circDown>
                     <div class=""></div>
                     <div class=""></div>
@@ -590,7 +590,7 @@
               <td>
                 <!-- Sat Row 6 -->
                 <div class="days_big" onclick="myFunction()">
-                  <span id="d42">7</span>
+                  <span id="d42" class= "d-big">7</span>
                   <div class= circDown>
                     <div class=""></div>
                     <div class=""></div>
