--- a/calendar.html
+++ b/calendar.html
@@ -917,7 +917,7 @@
           <option>12:00PM</option>
         </select>
         <div class="big-actions">
-          <div class="save" id="save" onclick="closeFunction_1()">
+          <div class="save" id="save" onclick="closeFunction()">
             Save <i class="fasfa-check"></i>
           </div>
           <div class="dismiss" id="dismiss" onclick="closeFunction()">
