sign-up button fix

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </select>
         </div>
         <div id="fourth-row" class="row">
-          <button><a class="sign-up-link" href="about.html">Sign Up</a></button>
+          <a class="sign-up-link" href="about.html">Sign Up</a>
         </div>
       </form>
     </div>
