added prompts & fixed social media links

--- a/login.html
+++ b/login.html
@@ -27,6 +27,9 @@
       <div class="heading">
         <h1>Returning User? Login Here!</h1>
         <p>Schedule your team meetings with WhenRUFree!</p>
+        <p id="disclaimer-p">
+          * For Demo Purposes use login: guest@whenrufree.com password:guest123
+        </p>
       </div>
       <div id="second-row" class="row">
         <input type="email" name="email" id="email" placeholder="Email" />
