--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
 </html>
 
 <!-- Modal -->
+
+  <p class="meet-team">
+    Click to meet the team!
+  </p>
 <div
   class="modal fade"
   id="exampleModal"
